2008-03-15  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Applied patch from Louis Ricard and
	make it work. Read function is done, write still needs to be done.

2008-03-21 Chris Morley

	* include/openbabel/builder.h, src/builder.cpp:
	Delay parsing of fragments.txt until first use, and then
	do only once, saving in a static variable. This matters for
	gen3D where operation on multiple molecules is common.
	I know OBBuilder is still under development and is not 'my'code;
	please revert if not suitable.

2008-03-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/atomrecord.cpp: New file to handle PDB-style atom
	records -- shared between PDB and PQR formats.

	* src/formats/pdbformat.cpp: Use it.

	* src/formats/pqrformat.cpp: Initial support for reading PQR style
	files (i.e., partial charge and VDW radius supplied with
	coordinates).

	* src/formats/Makefile.am, src/formats/Makefile.in,
	src/formats/CMakeLists.txt: Updates for above.

	* src/formats/cansmilesformat.cpp: Fix for bug exposed by Avogadro
	-- sometimes we only have one atom (and no canonical order data).

	* tools/obfragment.cpp: Update to generate new OBBuilder database.

2008-03-20  Carsten Niehaus  <cniehaus@kde.org>

	* src/*.cpp: Typo fixes

	* CMakeLists.txt: Require CMake 2.4.5.
	
2008-03-16  Noel O'Boyle  <baoilleach@gmail.com>
	
	* All .cpp and .h files: Set SVN property svn:eol to native

2008-03-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/CMakeLists.txt: Add ops and descriptors subdirectories.

	* src/ops.cpp, src/forcefield.cpp, src/ops/loader.cpp,
	src/ops/optransform.cpp, src/descriptors/cmpdfilter.cpp,
	src/descriptors/smartsdescriptors.cpp,
	src/descriptors/groupcontrib.cpp, src/format.cpp, src/alias.cpp,
	src/forcefields/forcefieldmmff94.cpp, src/formats/MCDLformat.cpp, 
	Change to UNIX line-endings for consistency. (Some files also had
	multiple line formats.)

	* include/openbabel/math/matrix3x3.h,